@@ -132,6 +132,7 @@ allcategories.title=Kategorien
 allfiles.title=Alle Dateien
 allimages.title=Alle Bilder
 alltopics.title=Alle Artikel
+allusers.title=All Users
 common.add=Hinzuf\u00FCgen
 common.back=Zur\u00FCck
 common.cancel=Abbruch
