@@ -132,6 +132,7 @@ allcategories.title=\u30AB\u30C6\u30B4\u30EA\u30FC
 allfiles.title=\u5168\u3066\u306E\u30D5\u30A1\u30A4\u30EB
 allimages.title=\u5168\u3066\u306E\u753B\u50CF
 alltopics.title=\u5168\u3066\u306E\u8A18\u4E8B
+allusers.title=All Users
 common.add=\u8FFD\u52A0
 common.back=\u623B\u308B
 common.cancel=\u30AD\u30E3\u30F3\u30BB\u30EB
