@@ -132,6 +132,7 @@ allcategories.title=Categories
 allfiles.title=All Files
 allimages.title=All Images
 alltopics.title=All Topics
+allusers.title=All Users
 common.add=Legg til
 common.back=Tilbake
 common.cancel=Avbryt
