@@ -132,6 +132,7 @@ allcategories.title=Kategorie
 allfiles.title=Wszystkie pliki
 allimages.title=Wszystkie obrazy
 alltopics.title=Wszystkie artyku\u0142y
+allusers.title=All Users
 common.add=Dodaj
 common.back=Powr\u00F3t
 common.cancel=Anuluj
