@@ -132,6 +132,7 @@ allcategories.title=Categories
 allfiles.title=All Files
 allimages.title=All Images
 alltopics.title=All Topics
+allusers.title=All Users
 common.add=L\u00E4gg till
 common.back=Tillbaka
 common.cancel=\u00C5ngra
