@@ -132,6 +132,7 @@ allcategories.title=\u5206\u7C7B
 allfiles.title=\u6240\u6709\u6587\u4EF6
 allimages.title=\u6240\u6709\u56FE\u7247
 alltopics.title=\u6240\u6709\u4E3B\u9898
+allusers.title=All Users
 common.add=\u6DFB\u52A0
 common.back=\u540E\u9000
 common.cancel=\u53D6\u6D88
