@@ -132,6 +132,7 @@ allcategories.title=\u5206\u985E
 allfiles.title=\u6240\u6709\u6587\u4EF6
 allimages.title=\u6240\u6709\u5716\u7247
 alltopics.title=\u6240\u6709\u4E3B\u984C
+allusers.title=All Users
 common.add=\u6DFB\u52A0
 common.back=\u5F8C\u9000
 common.cancel=\u53D6\u6D88
