@@ -6,6 +6,7 @@
 * [[Special:Categories|Kategóriák]]
 * [[Special:Filelist|All files]]
 * [[Special:Imagelist|All images]]
+* [[Special:Listusers|All users]]
 * [[Special:RecentChanges|Friss változások]]
 * [[Special:Search|Keresés]]
 * [[Special:Upload|Feltöltés]]
