@@ -160,3 +160,15 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
       fetch first {1} rows only \
     ) b \
     order by edit_date desc 
+STATEMENT_SELECT_WIKI_USERS = \
+    select * from ( \
+      select * from ( \
+        select login \
+        from jam_wiki_user_info \
+        order by login \
+        fetch first {0} rows only \
+      ) a \
+      order by login desc \
+      fetch first {1} rows only \
+    ) b \
+    order by login
