@@ -121,8 +121,8 @@ STATEMENT_SELECT_CATEGORIES = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(distinct jam_category.category_name) from jam_topic join jam_category on jam_topic.topic_id = jam_category.child_topic_id where jam_topic.virtual_wiki_id = @VWIKI_ID) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
-	IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                    + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
                       + 'select distinct top '+CONVERT(VARCHAR, @OFFSET + @LIMIT)+' jam_category.category_name, jam_category.sort_key ' \
@@ -148,7 +148,7 @@ STATEMENT_SELECT_RECENT_CHANGES = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_recent_change where virtual_wiki_name = @WIKI_NAME) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                    + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
@@ -174,7 +174,7 @@ STATEMENT_SELECT_RECENT_CHANGES_TOPIC = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_recent_change where topic_id = @TOPIC_ID) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                    + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
@@ -202,7 +202,7 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type = @TOPIC_TYPE and delete_date is null) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                    + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
@@ -230,7 +230,7 @@ STATEMENT_SELECT_TOPICS_ADMIN = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_admin_only = 1 and delete_date is null) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                    + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
@@ -260,7 +260,7 @@ STATEMENT_SELECT_WATCHLIST_CHANGES = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_topic, jam_virtual_wiki, jam_topic_version, jam_wiki_user, jam_watchlist where jam_virtual_wiki.virtual_wiki_id = jam_topic.virtual_wiki_id and jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id and jam_topic.current_version_id = jam_topic_version.topic_version_id and jam_topic.topic_name = jam_watchlist.topic_name and jam_virtual_wiki.virtual_wiki_id = @VWIKI_ID and jam_watchlist.wiki_user_id = @USER_ID and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5)) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( '\
                       + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( '\
@@ -302,7 +302,7 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_ANONYMOUS = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_topic, jam_virtual_wiki, jam_topic_version where jam_virtual_wiki.virtual_wiki_id = jam_topic.virtual_wiki_id and jam_topic.topic_id = jam_topic_version.topic_id and jam_virtual_wiki.virtual_wiki_name = @WIKI_NAME and jam_topic_version.wiki_user_ip_address = @WIKI_USER and jam_topic_version.wiki_user_id is null and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5)) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( ' \
                      + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
@@ -342,7 +342,7 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
         SET @COUNT = (select count(*) from jam_topic, jam_virtual_wiki, jam_topic_version, jam_wiki_user where jam_virtual_wiki.virtual_wiki_id = jam_topic.virtual_wiki_id and jam_wiki_user.wiki_user_id = jam_topic_version.wiki_user_id and jam_topic.topic_id = jam_topic_version.topic_id and jam_virtual_wiki.virtual_wiki_name = @WIKI_NAME and jam_wiki_user.login = @WIKI_USER and (jam_topic.delete_date is null or jam_topic_version.edit_type = 5)) \
-	IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @SQL = 'select * from ( '\
                       + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( '\
@@ -365,5 +365,29 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
                       + 'order by edit_date '\
                     + ') b '\
                     + 'order by edit_date desc '\
+        EXEC(@SQL) \
+    END
+STATEMENT_SELECT_WIKI_USERS = \
+    BEGIN \
+        DECLARE @COUNT int \
+        DECLARE @TOP int \
+        DECLARE @OFFSET int \
+        DECLARE @LIMIT int \
+        DECLARE @SQL varchar(300) \
+        SET @LIMIT = ? \
+        SET @OFFSET = ? \
+        SET @TOP = @LIMIT \
+        SET @COUNT = (select count(*) from jam_wiki_user_info) \
+        IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
+        IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
+        SET @SQL = 'select * from ( ' \
+                   + 'select top '+CONVERT(VARCHAR, @TOP)+' * from ( ' \
+                      + 'select top '+CONVERT(VARCHAR, @OFFSET + @LIMIT)+' login ' \
+                      + 'from jam_wiki_user_info \
+                      + 'order by login ' \
+                   + ') a ' \
+                   + 'order by login desc ' \
+                 + ') b ' \
+                 + ' order by login ' \
         EXEC(@SQL) \
     END
