@@ -202,3 +202,13 @@ STATEMENT_SELECT_WIKI_USER_CHANGES_LOGIN = \
       where rownum <= ? \
     ) \
     where rowcount > ? 
+STATEMENT_SELECT_WIKI_USERS = \
+    select * from ( \
+      select a.*, rownum rowcount from ( \
+        select login \
+        from jam_wiki_user_info \
+        order by login \
+      ) a \
+      where rownum <= ? \
+    ) \
+    where rowcount > ? 
